{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 39,
  "lineage": "44cf05bd-dccc-92e4-ee97-7c3f3d168757",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:074442581040:loadbalancer/app/healthflow-prod-alb/e912fd4e62623b55",
            "arn_suffix": "app/healthflow-prod-alb/e912fd4e62623b55",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "healthflow-prod-alb-141788157.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:074442581040:loadbalancer/app/healthflow-prod-alb/e912fd4e62623b55",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "healthflow-prod-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0118354c435b2ee3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00dbdb5a0b92011fc"
              },
              {
                "subnet_id": "subnet-030029aaa61a9aa51"
              }
            ],
            "subnets": [
              "subnet-00dbdb5a0b92011fc",
              "subnet-030029aaa61a9aa51"
            ],
            "vpc_id": "vpc-033c8427f4cc5677a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:074442581040:loadbalancer/app/healthflow-prod-alb/e912fd4e62623b55"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:security-group/sg-0118354c435b2ee3e",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0118354c435b2ee3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "healthflow-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "074442581040",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "sg-0118354c435b2ee3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcc8fe1d594799f5",
            "arn": "arn:aws:ec2:us-east-1:074442581040:elastic-ip/eipalloc-0fcc8fe1d594799f5",
            "association_id": "eipassoc-068c557a3b84b1fb8",
            "domain": "vpc",
            "id": "eipalloc-0fcc8fe1d594799f5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-067ab4df983d66605",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-34-231-215-179.compute-1.amazonaws.com",
            "public_ip": "34.231.215.179",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-eip-nat-0"
            },
            "tags_all": {
              "Name": "hf-prod-eip-nat-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b71ecc56851e7cb",
            "arn": "arn:aws:ec2:us-east-1:074442581040:elastic-ip/eipalloc-06b71ecc56851e7cb",
            "association_id": "eipassoc-094a8c4be836983db",
            "domain": "vpc",
            "id": "eipalloc-06b71ecc56851e7cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01d32ac4fb5e6a059",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_ip": "10.0.2.40",
            "public_dns": "ec2-54-91-195-56.compute-1.amazonaws.com",
            "public_ip": "54.91.195.56",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-eip-nat-1"
            },
            "tags_all": {
              "Name": "hf-prod-eip-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:internet-gateway/igw-0db3403df1cf92606",
            "id": "igw-0db3403df1cf92606",
            "owner_id": "074442581040",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-igw"
            },
            "tags_all": {
              "Name": "hf-prod-igw"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcc8fe1d594799f5",
            "association_id": "eipassoc-068c557a3b84b1fb8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fa0cd19383730e2f",
            "network_interface_id": "eni-067ab4df983d66605",
            "private_ip": "10.0.1.124",
            "public_ip": "34.231.215.179",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00dbdb5a0b92011fc",
            "tags": {
              "Name": "hf-prod-nat-0"
            },
            "tags_all": {
              "Name": "hf-prod-nat-0"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b71ecc56851e7cb",
            "association_id": "eipassoc-094a8c4be836983db",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ae476778a8c85d6e",
            "network_interface_id": "eni-01d32ac4fb5e6a059",
            "private_ip": "10.0.2.40",
            "public_ip": "54.91.195.56",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030029aaa61a9aa51",
            "tags": {
              "Name": "hf-prod-nat-1"
            },
            "tags_all": {
              "Name": "hf-prod-nat-1"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:route-table/rtb-0a55387fbbfbe2b8b",
            "id": "rtb-0a55387fbbfbe2b8b",
            "owner_id": "074442581040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa0cd19383730e2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hf-prod-rt-private-0"
            },
            "tags_all": {
              "Name": "hf-prod-rt-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "rtb-0a55387fbbfbe2b8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:route-table/rtb-0e338e9732e782b8b",
            "id": "rtb-0e338e9732e782b8b",
            "owner_id": "074442581040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae476778a8c85d6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hf-prod-rt-private-1"
            },
            "tags_all": {
              "Name": "hf-prod-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "rtb-0e338e9732e782b8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:route-table/rtb-04929cbe0b235237e",
            "id": "rtb-04929cbe0b235237e",
            "owner_id": "074442581040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db3403df1cf92606",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hf-prod-rt-public"
            },
            "tags_all": {
              "Name": "hf-prod-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "rtb-04929cbe0b235237e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089d11cc10cd85e85",
            "region": "us-east-1",
            "route_table_id": "rtb-0a55387fbbfbe2b8b",
            "subnet_id": "subnet-07e858c23a7c74358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025557a64dfff8c31",
            "region": "us-east-1",
            "route_table_id": "rtb-0e338e9732e782b8b",
            "subnet_id": "subnet-0e2b35fb134056a51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd561813c44a99fd",
            "region": "us-east-1",
            "route_table_id": "rtb-0a55387fbbfbe2b8b",
            "subnet_id": "subnet-0337819caf2ae98e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_data",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b944df19122857",
            "region": "us-east-1",
            "route_table_id": "rtb-0e338e9732e782b8b",
            "subnet_id": "subnet-078ea733e5704c5f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_data",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0798f6fcf3a292a3d",
            "region": "us-east-1",
            "route_table_id": "rtb-04929cbe0b235237e",
            "subnet_id": "subnet-00dbdb5a0b92011fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ec76d62e1ee348",
            "region": "us-east-1",
            "route_table_id": "rtb-04929cbe0b235237e",
            "subnet_id": "subnet-030029aaa61a9aa51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-07e858c23a7c74358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e858c23a7c74358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-app-0",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "hf-prod-app-0",
              "Tier": "app"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-07e858c23a7c74358",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-0e2b35fb134056a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2b35fb134056a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-app-1",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "hf-prod-app-1",
              "Tier": "app"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-0e2b35fb134056a51",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-0337819caf2ae98e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0337819caf2ae98e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-data-0",
              "Tier": "data"
            },
            "tags_all": {
              "Name": "hf-prod-data-0",
              "Tier": "data"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-0337819caf2ae98e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-078ea733e5704c5f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078ea733e5704c5f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-data-1",
              "Tier": "data"
            },
            "tags_all": {
              "Name": "hf-prod-data-1",
              "Tier": "data"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-078ea733e5704c5f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-00dbdb5a0b92011fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dbdb5a0b92011fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "hf-prod-public-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-00dbdb5a0b92011fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:subnet/subnet-030029aaa61a9aa51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030029aaa61a9aa51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074442581040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hf-prod-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "hf-prod-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-033c8427f4cc5677a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "subnet-030029aaa61a9aa51",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074442581040:vpc/vpc-033c8427f4cc5677a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b436b762960773c4",
            "default_route_table_id": "rtb-0c6b8fd53b662a2e9",
            "default_security_group_id": "sg-0210283f67942d857",
            "dhcp_options_id": "dopt-06af036359c31c056",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033c8427f4cc5677a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6b8fd53b662a2e9",
            "owner_id": "074442581040",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "healthflow-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "healthflow-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "074442581040",
            "id": "vpc-033c8427f4cc5677a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}